tests/machine/x/c/list_set_ops.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>

int main() {
    printf("%d\n", ((int[]){1, 2} union (int[]){2, 3}));
    printf("%d\n", ((int[]){1, 2, 3} except (int[]){2}));
    printf("%d\n", ((int[]){1, 2, 3} intersect (int[]){2, 4}));
    printf("%d\n", sizeof(((int[]){1, 2} union (int[]){2, 3}))/sizeof(((int[]){1, 2} union (int[]){2, 3})[0]));
    return 0;
}
